--- a/styles/styles.css
+++ b/styles/styles.css
@@ -328,7 +328,8 @@ body {
 .popover-cart::before {
     position: absolute;
     content: url("../images/popover-arrow-up.svg");
-    margin-top:-17px;
+    margin-top:-12px;
+    left: 4px;
 }
 
 .popover-list {
@@ -354,6 +355,7 @@ body {
   font-size: 16px;
   line-height: 20px;
   padding-bottom:20px;
+  margin-top: 5px;
   width: 320px;
   right: -60px;
   z-index: 1;
@@ -1435,13 +1437,27 @@ body {
   border-radius: 3px;
 }
 
-.control-input:hover {
+.control-mark-radio {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #CCCCCC;
+  border-radius: 50%;
+}
+
+.control:hover  {
   opacity: 0.6;
 }
-.control-input:active {
+.control:active {
   opacity: 0.3;
 }
 .control-input:focus + .control-mark {
+  outline: 2px solid #AF4FFF;
+}
+
+.control-input:focus + .control-mark-radio {
   outline: 2px solid #AF4FFF;
 }
 
@@ -1457,6 +1473,25 @@ body {
   width: 100%;
   height: 100%;
   background: url("../images/catalog/checked.svg");
+  background-repeat:no-repeat;
+  background-position: center;
+}
+
+.control-input[type="radio"]:checked + .control-mark-radio {
+  border-color:#000000;
+}
+
+.control-input[type="radio"]:checked + .control-mark-radio::before {
+  content:"";
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background:#000000;
   background-repeat:no-repeat;
   background-position: center;
 }
@@ -2084,7 +2119,7 @@ box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
 .value-info-tooltip::before {
   position: absolute;
   content: url("../images/modal-window/arrow-up.svg");
-  margin-left: 77px;
+  margin-left: 114px;
   margin-top:-30px;
 }
 
@@ -2129,6 +2164,10 @@ box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
 
 .quantity-wrapper {
   display: flex;
+}
+
+.quantity-wrapper-error {
+  border: 2px solid #FF3D3D;
 }
 
 .modal-form-item .button {
