--- a/10/styles/styles.css
+++ b/10/styles/styles.css
@@ -69,11 +69,11 @@ body {
 }
 
 .navigation-compare {
-  margin-right: 18px;
+  margin-right: 27px;
 }
 
 .navigation-login {
-  margin-left: 26px;
+  margin-left: 31px;
   margin-right: auto;
 }
 
@@ -129,6 +129,7 @@ body {
 .search-form {
   display: flex;
   position: relative;
+  margin-top: -6px;
 }
 
 .icon-search {
@@ -280,7 +281,7 @@ body {
   width: 50px;
   height: 50px;
   margin-top:-16px;
-  margin-left: 7px;
+  margin-left: 18px;
   border-radius: 50%;
   border: 2px solid #000000;
   opacity: 0.3;
@@ -294,7 +295,7 @@ body {
 }
 
 .navigation-services-margin {
-  margin-left: 45px;
+  margin-left: 42px;
 }
 
 .navigation-services-active {
@@ -457,7 +458,7 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
-  margin-bottom: 50px;
+  margin-bottom: 36px;
   padding-top: 10px;
   width: 220px;
   height: 40px;
@@ -498,10 +499,11 @@ body {
 }
 .slider-controls {
   position: absolute;
-  top: 50%;
+  top: 40%;
+  left: 5%;
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: 95%;
   transform: translateY(-50%);
 }
 
@@ -617,10 +619,11 @@ body {
   font-weight: 400;
   line-height: 30px;
   color: #444444;
+  margin-top: 6px;
 }
 
 .slider-specifications-list {
-  padding: 0;
+  padding: 3px;
 }
 
 .slider-specifications-item {
@@ -663,6 +666,7 @@ body {
 .catalog-list {
   display: flex;
   margin: 0;
+  margin-top: -7px;
   padding: 0;
   list-style-type: none;
 }
@@ -717,13 +721,13 @@ body {
 
 .services {
   display: flex;
-  margin-bottom: 70px;
+  margin-bottom: 95px;
   background-color: #F0F0F0;
 }
 
 .services-list {
   width: 880px;
-  margin: 72px 63px 72px 0;
+  margin: 26px -5px 70px 0;
   padding-left: 120px;
   list-style-type: none;
 }
@@ -733,7 +737,8 @@ body {
 }
 
 .services-images {
-  margin-left: 106px;
+  margin-left: 100px;
+  margin-right: 65px;
 }
 .services-list-button {
   width: 280px;
@@ -780,13 +785,13 @@ body {
   width: 7px;
   height: 319px;
   left: 279px;
-  top: 0;
+  top: -46px;
   content: "";
   z-index: 0;
 }
 
 .list-button-item {
-  margin-bottom: 35px;
+  margin-bottom: 30px;
 }
 
 .services-heading {
@@ -820,7 +825,7 @@ body {
   width: 1160px;
   height: 100px;
   margin: 0 auto;
-  margin-bottom: 70px;
+  margin-bottom: 77px;
 }
 
 .delivery-images {
@@ -870,6 +875,7 @@ body {
   height: 20px;
   margin: 40px 0 40px 0;
   text-align: center;
+  letter-spacing: 0.2em;
 }
 
 .delivery-info{
@@ -906,14 +912,17 @@ body {
 .contact-information-block {
   position: relative;
   width: 540px;
-  margin-right: auto;
+}
+
+.contact-information-block:not(:last-of-type) {
+  margin-right: 99px;
 }
 
 .contact-information-block::before {
   position: absolute;
   left: 0%;
   right: 0%;
-  top: 0%;
+  top: -1%;
   bottom: 0%;
   width: 84px;
   height: 7px;
@@ -942,6 +951,10 @@ body {
   margin: 0;
   margin-bottom: 30px;
   color: #444444;
+}
+
+.contact-paragraph-data:not(:last-of-type) {
+  margin-bottom: -1px;
 }
 
 .contact-list {
@@ -974,6 +987,7 @@ body {
 
 .contact-information .button {
   width: 270px;
+  margin: 0;
 }
 .contact-information .button:hover {
   background: #FFE17F;
@@ -987,11 +1001,12 @@ body {
 }
 
 .contact-text {
+  display: block;
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
   line-height: 30px;
-  margin-bottom: 15px;
+  margin-bottom: 16px;
   color: #444444;
 }
 
@@ -1031,6 +1046,7 @@ body {
   margin: 0;
   width: 30%;
   margin-top: 64px;
+  margin-left: 8px;
   color: #000000;
 }
 
@@ -1039,16 +1055,15 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 30px;
-  margin: 64px 0 144px 252px;
+  margin: 73px 0 144px 244px;
   width: 560px;
   color: #444444;
 }
 
 .distribution-form {
   display: flex;
-  width: 1158px;
-  padding-bottom: 56px;
-  align-items: flex-end;
+  width: 1160px;
+  padding-bottom: 50px;
 }
 
 .input-distribution {
@@ -1063,7 +1078,7 @@ body {
   background-color:transparent;
   border-color: #C4C4C4;
   border-width: 0 0 3px 0;
-  padding: 11px 16px 11px 16px;
+  padding: 5px 16px 11px 16px;
   outline: none;
 }
 
@@ -1137,7 +1152,8 @@ body {
   width: 1160px;
   margin: 0 auto;
   margin-top: 35px;
-  margin-bottom: 35px;
+  margin-left: 156px;
+  margin-bottom: 30px;
 }
 
 .inner-header h1{
@@ -1254,6 +1270,8 @@ body {
 
 .catalog-filter {
   width: 320px;
+  margin-bottom: 60px;
+  padding-left: 60px;
 }
 
 .catalog-filter-group {
@@ -1294,8 +1312,8 @@ body {
   text-transform: uppercase;
 }
 
-.catalog-filter {
-  margin-bottom: 60px;
+.filter-title {
+  margin-bottom: 72px;
 }
 
 .catalog-sorting {
@@ -1738,6 +1756,10 @@ body {
   width: 250px;
 }
 
+.footer-contacts-right {
+  margin-left: 50px;
+}
+
 .footer-contacts:first-of-type::before {
   position:absolute;
   background-color: #FFC700;
@@ -1756,7 +1778,7 @@ body {
   display: block;
   width: 145px;
   margin-top: 62px;
-  margin-bottom: 35px;
+  margin-bottom: 27px;
 }
 
 .logo-footer-link:hover {
@@ -1774,7 +1796,8 @@ body {
 
 .footer-links {
   width: 450px;
-  margin-left: 119px;
+  margin-left: 35px;
+  padding-left: 46px;
   margin-right: 183px;
 }
 
@@ -1785,6 +1808,7 @@ body {
   font-size: 16px;
   line-height: 20px;
   color: #FFFFFF;
+  margin: 0;
 }
 
 .footer-services-list {
@@ -1792,9 +1816,14 @@ body {
   margin: 0;
   padding: 0;
   margin-bottom: 62px;
+  margin-left: 36px;
   padding-top: 137px;
   list-style-type: none;
   justify-content: space-between;
+}
+
+.footer-services-list-item:not(:last-of-type) {
+  margin-right:30px;
 }
 
 .footer-social-network-list {
@@ -1802,6 +1831,7 @@ body {
   justify-content: center;
   margin: 0;
   margin-bottom: 61px;
+  margin-left: 156px;
   padding: 0;
   list-style-type: none;
 }
