--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  min-width: 1160px;
   font-family: "Rubik", sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -111,6 +112,7 @@ body {
 
 .navigation-list {
   display: flex;
+  flex-wrap: wrap;
   width: 1040px;
   margin: 0;
   margin-top: 30px;
@@ -317,24 +319,48 @@ body {
 .popover{
   display: block;
   position: absolute;
-  font-family: 'Rubik';
-  font-style: normal;
   margin-left: -60px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 18px;
-  z-index: 1;
   width: 1160px;
   color: #242424;
   background-color: #FFE17F;
   min-height: 180px;
+  z-index: 3;
+}
+
+.popover-content {
+  margin-top: 14px;
+}
+
+.popover-list-item {
+  margin-bottom: 15px;
+}
+
+.popover-item-link {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  color: #000000;
+  text-decoration: none;
+}
+
+.popover-item-link:hover {
+ opacity: 0.6;
+}
+.popover-item-link:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
+}
+.popover-item-link:active {
+  opacity: 0.3;
 }
 
 .popover-cart::before {
     position: absolute;
     content: url("../images/popover-arrow-up.svg");
-    margin-top:-12px;
-    left: 4px;
+    top: -15px;
+    left: 50%;
 }
 
 .popover-list {
@@ -352,7 +378,7 @@ body {
   height: 100%;
 }
 
-.popover-cart-content {
+.popover-cart {
   position: absolute;
   font-family: 'Rubik';
   font-style: normal;
@@ -362,8 +388,8 @@ body {
   padding-bottom:20px;
   margin-top: 5px;
   width: 320px;
-  right: -60px;
-  z-index: 1;
+  right: -70px;
+  z-index: 5;
   color: #FFFFFF;
   background-color: #000000;
   min-height: 307px;
@@ -387,6 +413,32 @@ body {
 .popover-cart-item img {
   margin-top: 15px;
   margin-right: auto;
+}
+
+.popover-cart-link {
+  display: flex;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+.popover-cart-link:hover {
+  opacity: 0.6;
+}
+.popover-cart-link:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
+  z-index: 6;
+}
+.popover-cart-link:active {
+  opacity: 0.3;
+}
+
+.popover-cart-paragraph {
+  margin-left: 23px;
 }
 
 .popover-cart-price {
@@ -416,29 +468,40 @@ body {
   background-color: #FFFFFF;
 }
 
+.button-open-cart:hover {
+  background: #FFE17F;
+}
+.button-open-cart:focus {
+  outline: 2px solid #AF4FFF;
+}
+.button-open-cart:active {
+  background: #FFE17F;
+  opacity: 0.3;
+}
+
 .popover-cart-item-close {
   margin-left: auto;
+  margin-top: 20px;
+  margin-bottom: 53px;
   background:inherit;
   padding: 0;
+  width: 10px;
+  height: 10px;
+  border: 0;
+  background: url("../images/popover-x.svg");
+  background-repeat:no-repeat;
+  background-position: center;
 }
 
-.popover-cart-item-close::before{
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 2px;
-  background: #FFFFFF;
-  transform: rotate(45deg);
+.popover-cart-item-close:hover {
+  opacity: 0.6;
 }
-.popover-cart-item-close::after{
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 2px;
-  background: #FFFFFF;
-  transform: rotate(-45deg);
+.popover-cart-item-close:focus {
+  outline: 2px solid #AF4FFF;
 }
-
+.popover-cart-item-close:active {
+  opacity: 0.3;
+}
 /* index.html */
 /* Стили слайдера */
 
@@ -462,7 +525,7 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
-  margin-bottom: 36px;
+  margin-bottom: 35px;
   padding-top: 10px;
   width: 220px;
   height: 40px;
@@ -491,7 +554,7 @@ body {
 
 .slider {
   margin-top: -135px;
-  margin-bottom: 80px;
+  margin-bottom: 75px;
 }
 
 .slider-image {
@@ -500,15 +563,17 @@ body {
 .slider-wrapper-images{
   position: relative;
   margin-right: 40px;
+  margin-top: -14px;
 }
 .slider-controls {
   position: absolute;
-  top: 40%;
-  left: 5%;
+  top: 40.5%;
+  left: 2.5%;
   display: flex;
   justify-content: space-between;
-  width: 95%;
+  width: 45.5%;
   transform: translateY(-50%);
+  z-index: 2;
 }
 
 .slider-button {
@@ -548,9 +613,9 @@ body {
 
 .slider-pagination {
   width: 1160px;
-  height: 530px;
   padding:0;
   margin:0;
+  margin-bottom: -11px;
 }
 
 .slider-pagination-number:not(:last-of-type) {
@@ -573,13 +638,15 @@ body {
   border-radius: 50%;
   cursor: pointer;
 }
-
+.button-pagination-active:hover,
 .button-pagination:hover {
   opacity: 0.6;
 }
+.button-pagination-active:active,
 .button-pagination:active {
   opacity: 0.3;
 }
+.button-pagination-active:focus,
 .button-pagination:focus {
   outline: 2px solid #AF4FFF;
 }
@@ -588,6 +655,7 @@ body {
 }
 
 .slider-heading {
+  position: relative;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 50px;
@@ -597,6 +665,7 @@ body {
   padding-top: 110px;
   margin-bottom: 29px;
   color: #000000;
+  z-index: 2;
 }
 
 .slider-paragraph {
@@ -632,10 +701,23 @@ body {
 
 .slider-specifications-item {
   padding-right: 20px;
+  margin-top: 10px;
 }
 
 .slider-pagination-item {
   display: flex;
+}
+
+.slider-number {
+  position: absolute;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 180px;
+  line-height: 30px;
+  color: #FFFFFF;
+  right: 50px;
+  top:68px;
 }
 
 .slider .button:hover {
@@ -669,13 +751,14 @@ body {
 
 .catalog-list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   margin-top: -7px;
   padding: 0;
   list-style-type: none;
 }
 
-.catalog-item {
+.catalog-item:not(:last-of-type) {
   margin-right: 40px;
 }
 
@@ -713,6 +796,10 @@ body {
   background: #FFE17F;
 }
 
+.catalog-item:nth-of-type(2) .catalog-item-icon {
+  align-items: flex-end;
+}
+
 /* Услуги */
 
 .page-container-services {
@@ -730,7 +817,7 @@ body {
 
 .services-list {
   width: 880px;
-  margin: 26px -5px 70px 0;
+  margin: 26px 0 70px 0;
   padding-left: 120px;
   list-style-type: none;
 }
@@ -786,7 +873,7 @@ body {
   position:absolute;
   background-color: #000000;
   width: 7px;
-  height: 319px;
+  height: 100%;
   left: 279px;
   top: -46px;
   content: "";
@@ -826,7 +913,6 @@ body {
 .delivery {
   background-color: #F0F0F0;
   width: 1160px;
-  height: 100px;
   margin: 0 auto;
   margin-bottom: 77px;
 }
@@ -861,9 +947,9 @@ body {
 }
 
 .delivery-icon {
-  display: block;
+  display: flex;
+  align-items: center;
   width: 125px;
-  height: 100px;
   padding: 35px 39px;
   background-color: #FFE17F;
 }
@@ -875,7 +961,6 @@ body {
   font-size: 20px;
   line-height: 23px;
   width: 910px;
-  height: 20px;
   margin: 40px 0 40px 0;
   text-align: center;
   letter-spacing: 0.2em;
@@ -883,6 +968,7 @@ body {
 
 .delivery-info{
   position: relative;
+  align-self: center;
   margin:30px 42.5px;
   width: 40px;
   height: 40px;
@@ -1058,14 +1144,15 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 30px;
-  margin: 73px 0 144px 244px;
-  width: 560px;
+  margin: 73px 0 0 auto;
+  width: 555px;
   color: #444444;
 }
 
 .distribution-form {
   display: flex;
   width: 1160px;
+  margin-top: 144px;
   padding-bottom: 50px;
 }
 
@@ -1159,7 +1246,7 @@ body {
   padding-left: 60px;
 }
 
-.inner-header h1{
+.inner-header-title{
   font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -1200,6 +1287,17 @@ body {
   line-height: 20px;
   color: #000000;
   text-decoration: none;
+}
+
+.breadcrumbs-link:hover {
+  opacity: 0.6;
+}
+.breadcrumbs-link:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
+}
+.breadcrumbs-link:active {
+  opacity: 0.3;
 }
 
 /* Каталог продуктов */
@@ -1260,6 +1358,9 @@ body {
 .sorting-button-updown:focus {
   outline: 2px solid #AF4FFF;
   border:0;
+}
+.sorting-button-updown:active {
+  opacity: 1;
 }
 
 .catalog-products {
@@ -1819,12 +1920,14 @@ body {
 
 .footer-services-list {
   display: flex;
+  flex-wrap: wrap;
+  max-width: 600px;
   margin: 0;
   padding: 0;
   margin-bottom: 62px;
   padding-top: 137px;
   list-style-type: none;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .footer-services-list-item:not(:last-of-type) {
@@ -1967,7 +2070,7 @@ body {
   display: flex;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 6;
   background: rgba(240, 240, 240, 0.9);
 }
 
@@ -2228,7 +2331,7 @@ box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .field-group-error input {
-  border: 2px solid #FF3D3D;
+  outline: 2px solid #FF3D3D;
 }
 
 .field-group-error span {
